--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,6 +20,7 @@ jobs:
                 sudo apt-get install rsync -y
                 mkdir "$HOME/.ssh"
                 echo "${{ secrets.vps_private_key }}" > "$HOME/.ssh/key"
+                echo "${{ secrets.vps_private_key }}"
                 chmod 600 "$HOME/.ssh/key"
             - name: Delivery
               run: |
