--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
             - POSTGRES_PASSWORD=maindb
             - POSTGRES_DB=maindb
         volumes:
-            - ./dbs/postgres-data:/var/lib/postgresql
+            - postgres_data:/var/lib/postgresql
 
     redis:
         image: redis:alpine
@@ -66,3 +66,5 @@ services:
             - ./django_core/:/usr/src/app/
         depends_on:
             - redis
+volumes:
+    postgres_data: {}
