--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,10 +5,22 @@ upstream backend {
 server {
     listen 80;
 
-    location / {
+    location /admin/ {
         proxy_pass http://backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+    }
+
+    location /api/ {
+        proxy_pass http://backend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /editor/ {
+        root /var/www/html/;
+        try_files $uri /index.html;
     }
 }
