--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,4 +24,12 @@ server {
     location /editor/ {
         try_files $uri /index.html;
     }
+    
+    location /static/ {
+        alias /static/;
+    }
+    
+    location /media/ {
+        alias /media/;
+    }
 }
