--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,10 +26,16 @@ server {
     }
     
     location /static/ {
-        alias /static/;
+        proxy_pass http://backend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
     
     location /media/ {
-        alias /media/;
+        proxy_pass http://backend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 }
