[ref] Refactor nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,14 @@ upstream backend {
 server {
     listen 80;
 
+    # front app 
+    root /var/www/html/;
+
+    location /editor/ {
+        try_files $uri /index.html;
+    }
+
+    # back admin app
     location /admin/ {
         proxy_pass http://backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,12 +25,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
-    }
-
-    root /var/www/html/;
-
-    location /editor/ {
-        try_files $uri /index.html;
     }
     
     location /static/ {
