[fix] Fix nginx config for editor static

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,16 +2,19 @@ upstream backend {
     server backend:8000;
 }
 
-# test comment
-
 server {
     listen 80;
 
     # front app 
-    root /var/www/html/;
+    root /var/www/html/editor;
+    index index.html;
 
     location /editor/ {
-        try_files $uri /index.html;
+	    try_files $uri/ /index.html;
+    }
+
+    location /editor/static/ {
+	    alias /var/www/html/editor/static/;
     }
 
     # back admin app
