--- a/django_core/requirements.txt
+++ b/django_core/requirements.txt
@@ -12,6 +12,7 @@ django-jazzmin==2.4.8
 django-rest-framework==0.1.0
 django-templated-mail==1.1.1
 djangorestframework==3.12.2
+django-filter==21.1
 djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
 gunicorn==20.0.4
