--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
         volumes:
             - ./django_core/:/usr/src/app/
         depends_on:
-            - redis
+            - backend
 
     celery-beat:
         build: ./django_core
@@ -66,6 +66,6 @@ services:
         volumes:
             - ./django_core/:/usr/src/app/
         depends_on:
-            - redis
+            - backend
 volumes:
     postgres_data: {}
