--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
         env_file:
             environments/app.env
         volumes:
-            - ./django_core/:/usr/src/app/
+            - ./django_core:/django_core
         depends_on:
             - backend
 
@@ -64,7 +64,7 @@ services:
         env_file:
             environments/app.env
         volumes:
-            - ./django_core/:/usr/src/app/
+            - ./django_core:/django_core
         depends_on:
             - backend
 volumes:
