[feat] Add locations for main front app

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,16 +5,25 @@ upstream backend {
 server {
     listen 80;
 
-    # front app 
-    root /var/www/html/editor;
+    # front app
     index index.html;
 
     location /editor/ {
+        root /var/www/html/editor;
 	    try_files $uri/ /index.html;
     }
 
     location /editor/static/ {
 	    alias /var/www/html/editor/static/;
+    }
+
+    location /app/ {
+        root /var/www/html/app;
+        try_files $uri/ /index.html;
+    }
+
+    location /app/static/ {
+        alias /var/www/html/app/static/;
     }
 
     # back admin app
