--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
             - ./django_core/media:/media
             - ./nginx:/etc/nginx/conf.d
             - ../lis-front/editor/build:/var/www/html/editor
+            - ../lis-front/app/build:/var/www/html/app
 
     celery:
         build: ./django_core
