--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,23 +6,25 @@ server {
     listen 80;
 
     # front app
-    index index.html;
+    root /var/www/html/;
+
 
     location /editor/ {
-        root /var/www/html/editor;
-	    try_files $uri/ /index.html;
+        index index.html;
+	    try_files $uri $uri/ /index.html;
     }
 
     location /editor/static/ {
 	    alias /var/www/html/editor/static/;
     }
 
-    location /app/ {
-        root /var/www/html/app;
-        try_files $uri/ /index.html;
+    location / {
+        root /var/www/html/app/;
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    location /app/static/ {
+    location /static/ {
         alias /var/www/html/app/static/;
     }
 
@@ -41,7 +43,7 @@ server {
         proxy_redirect off;
     }
     
-    location /static/ {
+    location /django_static/ {
         proxy_pass http://backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
