[LIS-152] Добавление моделей для отзывов и вопросов. Имплементация ручки для работы с ними (#34)
[feat] Add Review and Question models
[feat] Add ModelViewSets for new models
[feat] Add post_save signals -> celery task -> send_mail
[feat] Configured SMTP
[feat] Add serializers for new models

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ __pycache__/
 .DS_Store
 **/static/
 **/celerybeat-schedule
-django_core/media/
-django_core/static/
+./django_core/media/
+./django_core/static/
+environments/app.env
