--- a/django_core/requirements.txt
+++ b/django_core/requirements.txt
@@ -13,6 +13,7 @@ django-rest-framework==0.1.0
 django-templated-mail==1.1.1
 djangorestframework==3.12.2
 django-filter==21.1
+django-import-export==2.7.1
 djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
 gunicorn==20.0.4
