[LIS-192] Добавляет тип почты для отправки отзывов (#49)
* [feat] Add mail_type for questions and reviews

* [LIS-182] Трудоустройство и выбор лаборатории (#52)

* [feat] callback

* [feat] callbacks

* [feat] all to has_callbacks

* [ref] Delete mail_type for questions

Co-authored-by: Michil Egorov <egorov_michil@mail.ru>

--- a/environments/.env.dist
+++ b/environments/.env.dist
@@ -9,4 +9,5 @@ EMAIL_HOST_USER='host_email'
 EMAIL_HOST_PASSWORD='email_pswd'
 EMAIL_PORT=587
 
-EMAIL_RECIPIENTS=[]
+EMAIL_RECIPIENTS="test@test.com, test2@test.com"
+EMAIL_TECH="test3@test.com, test4@test.com"
