[feat] nginx resolve (#78)
Co-authored-by: Michil Egorov <michilegorov@Michils-MacBook-Pro.local>

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,13 +6,9 @@ server {
     listen 80;
     client_max_body_size 5M;
 
-    # front app
-    root /var/www/html/;
-
-
     location /editor/ {
-        index index.html;
-	    try_files $uri $uri/ /index.html;
+        alias /var/www/html/editor/;
+	    try_files $uri $uri/ /index.html =404;
     }
 
     location /editor/static/ {
@@ -20,8 +16,7 @@ server {
     }
 
     location / {
-        root /var/www/html/app/;
-        index index.html;
+        alias /var/www/html/app/;
         try_files $uri $uri/ /index.html;
     }
 
