--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -25,8 +25,8 @@ jobs:
                 chmod 600 "$HOME/.ssh/key"
             - name: Delivery
               run: |
-                rsync -e "ssh -i $HOME/.ssh/key -o StrictHostKeyChecking=no" --archive --compress --delete --exclude 'django_core/static' --exclude 'django_core/media' --exclude 'django_core/logs' . ${{ VPS_USER_NAME }}@${{ VPS_SERVER_NAME }}:~/lis-back/
-                echo "${{secrets.APP_ENV}}" | ssh -i $HOME/.ssh/key -o StrictHostKeyChecking=no ${{ VPS_USER_NAME }}@${{ VPS_SERVER_NAME }} -T "cat > ~/lis-back/environments/app.env"
+                rsync -e "ssh -i $HOME/.ssh/key -o StrictHostKeyChecking=no" --archive --compress --delete --exclude 'django_core/static' --exclude 'django_core/media' --exclude 'django_core/logs' . $VPS_USER_NAME@$VPS_SERVER_NAME:~/lis-back/
+                echo "${{secrets.APP_ENV}}" | ssh -i $HOME/.ssh/key -o StrictHostKeyChecking=no $VPS_USER_NAME@$VPS_SERVER_NAME -T "cat > ~/lis-back/environments/app.env"
             - name: Building on server
               run: |
-                ssh -i $HOME/.ssh/key ${{ VPS_USER_NAME }}@${{ VPS_SERVER_NAME }} 'cd lis-back && docker-compose up -d --build'
+                ssh -i $HOME/.ssh/key $VPS_USER_NAME@$VPS_SERVER_NAME 'cd lis-back && docker-compose up -d --build'
