Изменения с dev на main (#89)
* [feat] from asgi to wsgi

* [feat] add optimize resources and profile

* [LIS-270] Хэш для завершения урока

* [feat] Temp token lifetime bump

* [LIS-242] Добавляет проверку доступности урока (#76)

* [feat] Add lesson is accessible validation

* [feat] Add access validation for branchings
[ref] Move validation -> utils.py
[ref] Rename exception

* [ref] filtering by quest is not none

* [feat] Add tests for checking access to lessons

* [ref] Delete unused imports

* [feat] Add check access while finish lesson

* [feat] Add test: lesson access in quest after prev quest finished

* [LIS-242] Lessons access (#86)

* [feat] Add lesson is accessible validation

* [feat] Add tests for checking access to lessons

* [feat] Add test: lesson access in quest after prev quest finished

* [feat] fix tests

* [feat] generate image

* [feat] fix

* [feat] fix lesson checking

Co-authored-by: MaxBstr <maksimbastrikin@bk.ru>
Co-authored-by: Michil Egorov <michilegorov@Michils-MacBook-Pro.local>

* [feat] fix middle_name

* [feat] hide correct answers

* [feat] logging error_code

* [feat] add isu

* [feat] fix d

* [fix] fix response

* [feat] id token

* [feat] add add status code

* [feat] add quest choice money

* Отключает проверку доступа к урокам суперпользователям (#88)

* [feat] from asgi to wsgi (#84)

Co-authored-by: Michil Egorov <michilegorov@Michils-MacBook-Pro.local>

* From asgi to wsgi (#85)

* [feat] from asgi to wsgi

* [feat] add optimize resources and profile

Co-authored-by: Michil Egorov <michilegorov@Michils-MacBook-Pro.local>

* [LIS-270] Хэш для завершения урока

* [feat] Temp token lifetime bump

* [LIS-242] Добавляет проверку доступности урока (#76)

* [feat] Add lesson is accessible validation

* [feat] Add access validation for branchings
[ref] Move validation -> utils.py
[ref] Rename exception

* [ref] filtering by quest is not non

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -27,6 +27,8 @@ jobs:
               run: |
                 rsync -e "ssh -i $HOME/.ssh/key -o StrictHostKeyChecking=no" --archive --compress --delete --exclude 'django_core/static' --exclude 'django_core/media' --exclude 'django_core/logs' . $VPS_USER_NAME@$VPS_SERVER_NAME:~/lis-back/
                 echo "${{secrets.APP_ENV}}" | ssh -i $HOME/.ssh/key -o StrictHostKeyChecking=no $VPS_USER_NAME@$VPS_SERVER_NAME -T "cat > ~/lis-back/environments/app.env"
+                echo "GOOGLE_SPREADSHEET_ID=${{secrets.GOOGLE_SPREADSHEET_ID}}" | ssh -i $HOME/.ssh/key -o StrictHostKeyChecking=no $VPS_USER_NAME@$VPS_SERVER_NAME -T "cat >> ~/lis-back/environments/app.env"
+                echo "${{secrets.GDRIVE_CREDS}}" | ssh -i $HOME/.ssh/key -o StrictHostKeyChecking=no $VPS_USER_NAME@$VPS_SERVER_NAME -T "cat > ~/lis-back/django_core/gdrive_creds.json"
             - name: Building on server
               run: |
                 ssh -i $HOME/.ssh/key $VPS_USER_NAME@$VPS_SERVER_NAME 'cd lis-back && docker-compose up -d --build'
