--- a/environments/.env.dist
+++ b/environments/.env.dist
@@ -12,3 +12,5 @@ EMAIL_PORT=587
 
 EMAIL_RECIPIENTS="test@test.com, test2@test.com"
 EMAIL_TECH="test3@test.com, test4@test.com"
+
+GOOGLE_SPREADSHEET_ID=""
