post и get для courses

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
         image: redis:alpine
 
     backend:
-        restart: always
+      #  restart: always
         container_name: lis_back
         build: ./django_core
         env_file:
